<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shoot-Do List</string>
    <string name="action_settings">Settings</string>
    <string name="action_mail">E-Mail</string>
    <string name="completion_status">Completed: </string>
    <string name="completion_none">not completed!</string>
    <string name="to_do">Task: </string>
    <string name="deadline">Deadline: </string>
    <string name="description">Description: </string>
    <string name="photo">Photo: </string>
    <string name="not_set">Not set yet!</string>

    <string name="min_date"></string>

    <string name="fb_share">on facebook</string>
    <string name="simple_share">simple share</string>
    <string name="twitter_share">on twitter</string>
    <string name="share_dialog_name">Share this:</string>

</resources>
